@@ -4,6 +4,8 @@ class Sys {
   native static method getenv : string ($name : string);
 
   native static method setenv : int ($name : string, $value : string, $overwrite : int);
+
+  native static method unsetenv : int ($name : string);
 }
 
 =pod
